--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,10 @@
 @import './views/App.scss';
+@import './components/Main';
+@import './components/Footer';
+@import './views/App';
+@import './components/NavBar';
+@import './components/Head';
+@import './components/Home';
+@import './components/Pokelist';
+@import './components/Card';
+@import './components/Search';
