--- a/src/styles/components/_Head.scss
+++ b/src/styles/components/_Head.scss
@@ -9,7 +9,7 @@
 
 .header-day{
     @extend %header-basic;
-    background-color: $light-orange;
+    background-color: #e72031;
     color: $blue;
     }
     
