--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,5 @@
 @import './components/Pokelist';
 @import './components/Card';
 @import './components/Search';
+@import './components/Lab';
+@import './components/Pokedex';
