--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -7,6 +7,8 @@
     width: 175px;
     margin:0px;
     background-color: white;
+    color: rgb(35, 35, 35);
+    margin-bottom: 5px;
     border-radius: 15px;
     background-image: url('../../assets/presentacion.jpg');
     &> .pokelogo {
