--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -2,13 +2,54 @@
 @import '../utils/mixins.scss';
 
 .home {
+    display: flex;
+    justify-content: center;
     background-color: $light-blue;
-    min-height: 85vh;
-    &>h2{
-        margin-top: 0
-        
-    }
-    &>img{
-        max-width: 300px;
-    }
+    border: 2px solid black;
+    overflow: hidden;
+    height: 400px;
+    border-radius: 15px;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5px;
+}
+.home img.logo {
+    width: 300px;
+  }
+  .home img.gif {
+    height: 175px;
+  }
+  .button{
+    
+    background-color: #52ae5f;
+    color: white;
+    width: 300px;
+    height: 100px;
+    border: 3 solid black;
+    margin-bottom: 3px;
+    font-size: 30px;
+    border-radius: 15px;
+  }
+  .button:hover{
+    background-color: #357a3e;
+    color: white;
+    width: 300px;
+    height: 100px;
+    border: 3 solid black;
+    margin-bottom: 3px;
+  }
+  .trainer{
+    width: 280px;
+    background-color: #f2f2f2;
+    color: #333;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 3px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  }
