--- a/src/styles/components/_Main.scss
+++ b/src/styles/components/_Main.scss
@@ -2,9 +2,19 @@ main{
     display: flex;
     height: 600px;
     width: 700px;
-    background-color: red;
+    background-color: #da1e2d;
     overflow: auto;
     align-items: center;
     flex-direction: column;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+    h1 {
+        font-size: 36px;
+        color: #000;
+        text-shadow:
+          -1px -1px 0 #fff,
+          1px -1px 0 #fff,
+          -1px 1px 0 #fff,
+          1px 1px 0 #fff;
+      }
     
 }
