--- a/src/styles/components/_NavBar.scss
+++ b/src/styles/components/_NavBar.scss
@@ -5,19 +5,33 @@
     list-style: none;
     display: flex;
     justify-content: space-around;
-    width: 70vw;
+    width: 700px;
     padding-left: 0;
 
     &>li>a {
         text-decoration: none;
-         color: red
+         color: white;
     }
-}
+  
+    }
+    #link-nav {
+        font-size: 22px;
+        color: #eebe10;
+        text-shadow:
+          -1px -1px 0 #4c4b4b,
+          1px -1px 0 #4c4b4b,
+          -1px 1px 0 #4c4b4b,
+          1px 1px 0 #4c4b4b;
+      }
+      #link-nav:hover {
+        font-size: 22px;
+        color: #18a1db;
+        text-shadow:
+          -1px -1px 0 #e6e3e3,
+          1px -1px 0 #e6e3e3,
+          -1px 1px 0 #e6e3e3,
+          1px 1px 0 #e6e3e3;
+      }
 
-.link-day {
-    color: $dark-blue
-}
 
-.link-night {
-    color: $light-blue
-}
+
