--- a/src/styles/components/_Pokelist.scss
+++ b/src/styles/components/_Pokelist.scss
@@ -13,5 +13,7 @@
     overflow: auto;
     border-radius: 15px;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
     
 }
+
