--- a/src/styles/views/_App.scss
+++ b/src/styles/views/_App.scss
@@ -1,14 +1,21 @@
 #root {
     text-align: center;
     margin:0px;
-    min-height: 800px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
     overflow: auto;
+    background-image: url('../../assets/wallpaper.jpg');
+    
 }
 
 * {
-    font-family: serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+body{
+    
+    
+    background-repeat:repeat;
 }
