--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -10,61 +10,23 @@
     color: rgb(35, 35, 35);
     margin-bottom: 5px;
     border-radius: 15px;
-    background-image: url('../../assets/presentacion.jpg');
     &> .pokelogo {
         height: 25px;
     }
     &> .pokeimg {
         height: 150px;
     }
-    
-    
-    
 }
 
-// @mixin pokemon-base-card {
+@mixin basic-detail{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-self: center;
+    height:80%;
+    width: 325px;
+    margin:0px;
+    
 
-//     width: 28%;
-//     margin: 1vw 0vw 1vw 3vw;
-//     border-radius: 3vw 3vw;
-
-//     & > img {
-//         width: 70%;
-//         aspect-ratio: 4/3;
-//         object-fit: contain;
-//     }
-
-//     & > .pokemon-name-container {
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-//         border-radius: 0 0 2vw 2vw;
-        
-//         & > h2 {
-//             font-size: 3.5vw;
-//             font-weight: 500;
-//             margin: 1vw;
-//             color: white;
-//         }
-//     }
-//     & > .pokedex-number-container {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         font-size: 3vw;
-
-//         & > img {
-//             width: 25%;
-//             aspect-ratio: 4/3;
-//             object-fit: contain;
-//             margin: 1vw 0 0 1vw;
-//         }
-
-//         & > p {
-//             margin: 0;
-//             margin-top: 1.5vw;
-//             margin-right: 2.5vw;
-//             font-weight: 600;
-//         }
-//     }
-// }
+}
