--- a/src/styles/views/_App.scss
+++ b/src/styles/views/_App.scss
@@ -3,11 +3,11 @@
     margin:0px;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    
     align-items: center;
     flex-direction: column;
     overflow: auto;
-    background-image: url('../../assets/wallpaper.jpg');
+    
     
 }
 
@@ -16,6 +16,6 @@
 }
 body{
     
-    
+    background-image: url('src/assets/wallpaper.jpg');
     background-repeat:repeat;
 }
